# internal/handlers/rest.go
@@ -1,11 +1,14 @@
 package handlers
 
 import (
-	"customer-service/internal/core/ports"
+	"customer-service/config"
+	"customer-service/internal/core/interfaces"
 	"customer-service/pkg/authorization"
 	"customer-service/pkg/dto"
+	"customer-service/pkg/logging"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
+	"go.opentelemetry.io/otel/trace"
 	"net/http"
 
 	"customer-service/docs"
@@ -14,14 +17,18 @@ import (
 import "github.com/gin-gonic/gin"
 
 type HTTPHandler struct {
-	customerService ports.CustomerService
+	customerService interfaces.CustomerService
 	router          *gin.Engine
+	logger          logging.Logger
+	config          *config.Config
 }
 
-func NewRest(customerService ports.CustomerService, router *gin.Engine) *HTTPHandler {
+func NewRest(customerService interfaces.CustomerService, router *gin.Engine, logger logging.Logger, config *config.Config) *HTTPHandler {
 	return &HTTPHandler{
 		customerService: customerService,
 		router:          router,
+		config:          config,
+		logger:          logger,
 	}
 }
 
@@ -34,8 +41,8 @@ func (handler *HTTPHandler) SetupEndpoints() {
 }
 
 func (handler *HTTPHandler) SetupSwagger() {
-	docs.SwaggerInfo.Title = "Customer service API"
-	docs.SwaggerInfo.Description = "The customer service manages all customers for the BikePack system."
+	docs.SwaggerInfo.Title = handler.config.Server.Service + " API"
+	docs.SwaggerInfo.Description = handler.config.Server.Description
 
 	handler.router.GET("/swagger/customer/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
@@ -46,19 +53,24 @@ func (handler *HTTPHandler) SetupSwagger() {
 // @Description  gets all customers in the system
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  []domain.Customer
+// @Success      200  {object}  dto.CustomerListResponse
 // @Router       /api/customers [get]
 func (handler *HTTPHandler) GetAll(c *gin.Context) {
+	ctx := c.Request.Context()
+	span := trace.SpanFromContext(ctx)
+	defer span.End()
+
 	if authorization.NewRest(c).AuthorizeAdmin() {
 
-		customers, err := handler.customerService.GetAll()
+		customers, err := handler.customerService.GetAll(ctx)
 
 		if err != nil {
 			c.AbortWithStatus(http.StatusNotFound)
 			return
 		}
 
-		c.JSON(http.StatusOK, customers)
+		c.JSON(http.StatusOK, dto.CreateCustomerListResponse(customers))
+		return
 	}
 
 	c.AbortWithStatus(http.StatusUnauthorized)
@@ -70,20 +82,25 @@ func (handler *HTTPHandler) GetAll(c *gin.Context) {
 // @Param        id     path  string           true  "Customer id"
 // @Description  gets a customer from the system by its ID
 // @Produce      json
-// @Success      200  {object}  domain.Customer
+// @Success      200  {object}  dto.CustomerResponse
 // @Router       /api/customers/{id} [get]
 func (handler *HTTPHandler) Get(c *gin.Context) {
+	ctx := c.Request.Context()
+	span := trace.SpanFromContext(ctx)
+	defer span.End()
+
 	auth := authorization.NewRest(c)
 
 	if auth.AuthorizeAdmin() || auth.AuthorizeMatchingId(c.Param("id")) {
-		customer, err := handler.customerService.Get(c.Param("id"))
+		customer, err := handler.customerService.Get(ctx, c.Param("id"))
 
 		if err != nil {
 			c.AbortWithStatus(http.StatusNotFound)
 			return
 		}
 
-		c.JSON(http.StatusOK, customer)
+		c.JSON(http.StatusOK, dto.CreateCustomerResponse(customer))
+		return
 	}
 
 	c.AbortWithStatus(http.StatusUnauthorized)
@@ -96,28 +113,35 @@ func (handler *HTTPHandler) Get(c *gin.Context) {
 // @Accept       json
 // @Param        customer  body  dto.BodyCreateCustomer  true  "Add customer"
 // @Produce      json
-// @Success      200  {object}  dto.ResponseCreateCustomer
+// @Success      200  {object}  dto.CustomerResponse
 // @Router       /api/customers [post]
 func (handler *HTTPHandler) Create(c *gin.Context) {
+	ctx := c.Request.Context()
+	span := trace.SpanFromContext(ctx)
+	defer span.End()
+
 	body := dto.BodyCreateCustomer{}
 	err := c.BindJSON(&body)
 
 	if err != nil {
 		c.AbortWithStatus(http.StatusBadRequest)
+		return
 	}
 
 	auth := authorization.NewRest(c)
 
 	if auth.AuthorizeAdmin() || auth.AuthorizeMatchingId(body.ID) {
 
-		customer, err := handler.customerService.Create(body.ID, body.ServiceArea)
+		customer, err := handler.customerService.Create(ctx, body.ID, body.ServiceArea)
 
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+			c.AbortWithStatus(http.StatusInternalServerError)
+			handler.logger.Error(ctx, err.Error())
 			return
 		}
 
-		c.JSON(http.StatusOK, dto.BuildResponseCreateCustomer(customer))
+		c.JSON(http.StatusOK, dto.CreateCustomerResponse(customer))
+		return
 	}
 
 	c.AbortWithStatus(http.StatusUnauthorized)
@@ -131,9 +155,13 @@ func (handler *HTTPHandler) Create(c *gin.Context) {
 // @Param        customer  body  dto.BodyUpdateServiceArea  true  "Update customer"
 // @Param        id  path  string  true  "Customer id"
 // @Produce      json
-// @Success      200  {object}  dto.ResponseUpdateServiceArea
+// @Success      200  {object}  dto.CustomerResponse
 // @Router       /api/customers/{id}/service-area [put]
 func (handler *HTTPHandler) UpdateServiceArea(c *gin.Context) {
+	ctx := c.Request.Context()
+	span := trace.SpanFromContext(ctx)
+	defer span.End()
+
 	auth := authorization.NewRest(c)
 
 	if auth.AuthorizeAdmin() || auth.AuthorizeMatchingId(c.Param("id")) {
@@ -143,16 +171,19 @@ func (handler *HTTPHandler) UpdateServiceArea(c *gin.Context) {
 
 		if err != nil {
 			c.AbortWithStatus(http.StatusBadRequest)
-		}
-
-		customer, err := handler.customerService.UpdateServiceArea(c.Param("id"), body.ServiceArea)
-
-		if err != nil {
-			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 			return
 		}
 
-		c.JSON(http.StatusOK, dto.BuildResponseUpdateServiceArea(customer))
+		customer, err := handler.customerService.UpdateServiceArea(ctx, c.Param("id"), body.ServiceArea)
+
+		if err != nil {
+			c.AbortWithStatus(http.StatusInternalServerError)
+			handler.logger.Error(ctx, err.Error())
+			return
+		}
+
+		c.JSON(http.StatusOK, dto.CreateCustomerResponse(customer))
+		return
 	}
 
 	c.AbortWithStatus(http.StatusUnauthorized)
